[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://src/TitleScreen/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/GUI/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GUI/PauseLayer/PauseLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GUI/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/GUI/FadeLayer/TransitionLayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/GUI/HTML5Focus/HTMLfocus.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Audio/AudioManager.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Levels" type="Node2D" parent="."]

[node name="MainMenu" parent="Levels" instance=ExtResource( 2 )]
layer = -1
first_level = "res://src/Levels/World.tscn"

[node name="HUDLayer" parent="." instance=ExtResource( 3 )]
layer = 99

[node name="PauseLayer" parent="." instance=ExtResource( 4 )]
layer = 100

[node name="OptionsMenu" parent="." instance=ExtResource( 5 )]
layer = 101

[node name="TransitionLayer" parent="." instance=ExtResource( 6 )]
layer = 128

[node name="TransitionTween" type="Tween" parent="TransitionLayer"]

[node name="MouseBlocker" type="CanvasLayer" parent="."]
layer = 128

[node name="Control" type="Control" parent="MouseBlocker"]
anchor_top = 0.00214276
anchor_right = 1.0
anchor_bottom = 1.00214
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -4.0
bus = "Music"

[node name="sounds" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -80.0
bus = "SFX"

[node name="AudioManager" parent="." instance=ExtResource( 8 )]

[node name="HTMLfocus" parent="." instance=ExtResource( 7 )]
layer = 128
[connection signal="tween_completed" from="TransitionLayer/TransitionTween" to="." method="_on_TransitionTween_tween_completed"]
